# python-atmos-energy

./: LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
src/atmos_energy/: __init__.py  cli.py  constants.py
tests/: test_atmosenergy.py  test_cli.py
tests/data/: invalidformat.xls  usage.xls
wiki/: API-Reference.md  CLI-Usage.md  Data-Formats.md  Development.md
