[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "atmos-energy"
version = "0.1.5"
description = "Python client for retrieving energy usage data from Atmos Energy Account Center"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Jeremy Jack", email = "jeremy@rocketscientry.com"},
]
maintainers = [
    {name = "Jeremy Jack", email = "jeremy@rocketscientry.com"},
]
keywords = ["atmos-energy", "energy", "usage", "api-client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "python-dateutil>=2.8.2",
    "pyyaml>=6.0.3",
    "requests>=2.31.0",
    "xlrd>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "requests-mock>=1.12.1",
    "ruff>=0.14.8",
    "uv>=0.9.17",
]

[project.urls]
Homepage = "https://github.com/jjack/python-atmos-energy"
Repository = "https://github.com/jjack/python-atmos-energy.git"
Issues = "https://github.com/jjack/python-atmos-energy/issues"
Documentation = "https://github.com/jjack/python-atmos-energy#readme"

[tool.pytest.ini_options]
addopts = "--maxfail=1 --cov=atmos_energy --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[project.scripts]
atmos-energy = "atmos_energy.cli:main"

[tool.ruff.lint]
extend-select = [
    "A",        # detect shadowed builtins
    "B",        # Bugbear rules
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "NPY",      # Some numpy-specific things
    "COM",      # enforce trailing comma rules
    "DTZ",      # require strict timezone manipulation with datetime
    "FBT",      # detect boolean traps
    "N",        # enforce naming conventions, e.g. ClassName vs function_name
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.format]
# Use single quotes in `ruff format`.
quote-style = "single"
indent-style = "space"

[tool.uv.build-backend]
module-name = "atmos_energy"
